# uarc

./: .gitignore  AI_Inference_Architecture_Exploration.docx  README.md  UARC_Algorithm_Design.docx  UARC_Architecture_Document.docx  __init__.py  asdt.py  bsps.py  demo_output.txt  demo_uarc.py  hge.py  hms.py  mlme.py  pyproject.toml  run_tests.py  tgss.py  titan_numpy.py  trainer.py  trd.py  uarc_README.md  uarc_ai_vm.py  uarc_modules_3_to_6.py  uarc_run_all.py  uarc_runtime.py  uarc_tde.py  uarc_tests.py
tests/: test_huggingface_eads.py  test_uarc.py
uarc/: __init__.py  cli.py  server.py
uarc/backends/: base.py  huggingface.py  llama_cpp.py  ollama.py  vllm.py
uarc/core/: config.py  runtime.py  types.py
uarc/memory/: aivm.py
uarc/routing/: nsc.py  tde.py
uarc/scheduling/: dpe_acs.py  eads.py  eads_engine.py
uarc/ui/: app.js  index.html  style.css
